evaluationDependsOn(':lib-json')
evaluationDependsOn(':api-data-store-server-java')
evaluationDependsOn(':lib-transactional-file-system')

apply plugin: 'java'
apply plugin: 'application'

compileJava {
    options.compilerArgs << '-parameters'
}

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

repositories {
    ivy {
        ivyPattern "https://sissource.ethz.ch/openbis/openbis-public/openbis-ivy/-/raw/BIS-2532-ivy-repository-refactoring-for-open-bis-7/[organisation]/[module]/[revision]/ivy.xml"
        artifactPattern "https://sissource.ethz.ch/openbis/openbis-public/openbis-ivy/-/raw/BIS-2532-ivy-repository-refactoring-for-open-bis-7/[organisation]/[module]/[revision]/[artifact]-[revision](-[classifier]).[ext]"
    }
    //mavenCentral()
}

configurations {
    tests.extendsFrom testImplementation
    tests.canBeResolved true
}

dependencies {
    annotationProcessor libs.org.projectlombok.lombok
    implementation project(':lib-openbis-commonbase'),
            project(':lib-openbis-messages'),
            project(':lib-data-store-commonbase'),
            project(':lib-data-store-common'),
            project(':lib-mail'),
            project(':lib-json'),
            project(':lib-messages-db'),
            project(':lib-archiver-db'),
            project(':lib-archiver'),
            project(':lib-pathinfo-db'),
            project(':lib-pathinfo'),
            project(':lib-shuffling'),
            project(':lib-dbmigration'),
            project(':lib-maintenance'),
            project(':lib-hierarchical-content'),
            project(':lib-transactional-file-system'),
            project(':lib-http'),
            project(':api-data-store-server-java'),
            project(':api-openbis-java'),
            libs.org.projectlombok.lombok,
            libs.io.netty.netty.all.v4168final,
            libs.org.slf4j.slf4j.api,
            libs.org.slf4j.slf4j.jdk14,
            libs.net.sourceforge.javacsv.javacsv,
            libs.deltavisio.http.invoker.reloaded

    testImplementation(project(path: ':lib-commonbase', configuration: 'tests'))
    testImplementation(libs.org.junit.junit)
    testImplementation(libs.org.hamcrest.hamcrest.core)
    testImplementation(libs.org.hamcrest.hamcrest.library)
    testImplementation(libs.org.jmock.jmock) {
        exclude group: 'hamcrest', module: 'hamcrest-core'
        exclude group: 'hamcrest', module: 'hamcrest-library'
    }
}

task openBISDevelopmentEnvironmentAFSStart(type: JavaExec) {
    mainClass = 'ch.ethz.sis.afsserver.startup.Main'
    classpath = sourceSets.main.runtimeClasspath
    args(["../server-data-store/src/main/resources/service.properties"])
    jvmArgs(['--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
             '--add-opens=java.base/java.nio=ALL-UNNAMED',
             '-Dafs.logging.configuration=src/main/resources/logging.properties',
             '-Dio.netty.tryReflectionSetAccessible=true',
             '-Xmx512M', '-ea'])
}

task benchmarkAFS(type: JavaExec) {
    mainClass = 'ch.ethz.sis.afsserver.startup.Main'
    classpath = sourceSets.main.runtimeClasspath
    args(["../server-data-store/src/main/resources/" +
                  (System.getProperty("auth") ? 'standalone-service-auth.properties' : 'standalone-service.properties')])

    jvmArgs([
            '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
            '--add-opens=java.base/java.nio=ALL-UNNAMED',
            '--add-opens=java.base/java.util=ALL-UNNAMED',
            '-Dio.netty.tryReflectionSetAccessible=true',

            '-Dafs.logging.configuration=src/main/resources/logging.properties',

            '-Dcom.sun.management.jmxremote',
            '-Dcom.sun.management.jmxremote.port=12345',
            '-Dcom.sun.management.jmxremote.authenticate=false',
            '-Dcom.sun.management.jmxremote.ssl=false',
            (System.getProperty("serverXmx") ?: '-Xmx256M'),
            '-ea'
    ])
}

task benchmarkAFSAuth(type: JavaExec) {
    mainClass = 'ch.ethz.sis.afsserver.startup.Main'
    classpath = sourceSets.main.runtimeClasspath
    args(["../server-data-store/src/main/resources/standalone-service-auth.properties"])

    jvmArgs([
            '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
            '--add-opens=java.base/java.nio=ALL-UNNAMED',
            '--add-opens=java.base/java.util=ALL-UNNAMED',

            '-Dafs.logging.configuration=src/main/resources/logging.properties',

            '-Dio.netty.tryReflectionSetAccessible=true',
            '-Dcom.sun.management.jmxremote',
            '-Dcom.sun.management.jmxremote.port=12345',
            '-Dcom.sun.management.jmxremote.authenticate=false',
            '-Dcom.sun.management.jmxremote.ssl=false',
            (System.getProperty("serverXmx") ?: '-Xmx1526M'),
            '-ea'
    ])
}


task AFSServerZip(type: Zip, dependsOn: compileJava) {
    archiveBaseName = 'afs-server'
    from(jar) {
        into('afs-server/lib/')
    }
    from(configurations.runtimeClasspath) {
        into('afs-server/lib/')
        exclude '**/*-sources.jar'
        exclude '**/*-javadoc.jar'
    }
    from('dist') {
        into 'afs-server/'
    }
}

tasks.named('distTar') {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
tasks.named('distZip') {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

task testJar(type: Jar, dependsOn: testClasses) {
    archiveBaseName = "test-${project.name}"
    from sourceSets.test.output
}

jar {
    from('src/main') {
        include 'sql/**/*.sql'
        into 'afs-server'
    }
}

artifacts {
    tests testJar
}

test {
    systemProperty "java.awt.headless", "true"
}
